[project]
name = "question-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.121.3",
    "motor>=3.7.1",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.4",
    "uvicorn[standard]>=0.38.0",
]
