[project]
name = "question-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.121.3",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "motor>=3.7.1",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.38.0",
    "chromadb>=1.3.5",
    "langfuse>=2.56.0",
    "langfuse-langchain>=2.6.0",
]
